--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "cypress": "cypress",
+    "cypress:headless": "cypress run"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
     "@types/lodash": "^4.14.173",
     "@types/uuid": "^8.3.1",
     "autoprefixer": "^9",
     "axios": "^0.21.4",
+    "babel-jest": "^27.2.1",
     "classnames": "^2.3.1",
+    "cypress": "^8.4.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "jest": "^27.2.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
     "postcss": "^7",
@@ -28,9 +36,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/react": "17.0.21",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "4.31.1",
-    "@types/react": "17.0.21",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
