--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "jest --watch",
     "cypress": "cypress",
     "cypress:headless": "cypress run"
   },
@@ -23,6 +23,7 @@
     "cypress": "^8.4.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
